# aoc-2020

./: Cargo.toml  README.md  shell.nix
src/: lib.rs
