[package]
name = "advent"
version = "0.1.0"
authors = ["sohalt <sohalt@sohalt.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["cookies"] }
tokio = { version = "0.2", features = ["full"] }
regex = "1"
lazy_static = "1.4"
